	and patch from Olaf Mersmann.)

    o	The S4 initialize() methods for "matrix", "array", and "ts" have
 	been fixed to call validObject(). (PR#14284)

    o	R CMD INSTALL now behaves the same way with or without
	--no-multiarch on platforms with only one installed
	architecture.  (It used to clean the src directory without
	--no-multiarch.)

    o	rbeta(n, a,b) no longer occasionally returns NaN for a >> 1 > b.
	(PR#14291)

    o	pnorm(x, log.p = TRUE) could return NaN not -Inf for x near
	(minus for lower.tail=TRUE) the largest representable number.

    o	Compressed ata files *.(txt|tab|csv).(gz|bz2|xz) were not
	recognized for the list of data topics and hence for packages
	using LazyData.  (PR#14273)




		CHANGES IN R VERSION 2.11.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Packages must have been installed under R >= 2.10.0, as the
	current help system is the only one now supported.

    o	A port to 64-bit Windows is now available as well as binary
	package repositiories: see the 'R Administration and
	Installation Manual'.

    o	Argument matching for primitive functions is now done in the
	same way as for interpreted functions except for the deliberate
	exceptions

	    call switch .C .Fortran .Call .External

	all of which use positional matching for their first argument,
	and also some internal-use-only primitives.

    o	The default device for command-line R at the console on Mac OS X
	is now quartz() and not X11().


NEW FEATURES

    o	The 'open' modes for connections are now interpreted more
	consistently.  open = "r" is now equivalent to open = "rt" for
	all connections.  The default open = "" now means "rt" for all
	connections except the compressed file connections gzfile(),
	bzfile() and xzfile() for which it means "rb".

    o	R CMD INSTALL now uses the internal untar() in package utils:
	this ensures that all platforms can install bzip2- and
	xz-compressed tarballs.	 In case this causes problems (as it